testsuite/tests/typing-recmod/t11bad.compilers.reference
File "t11bad.ml", line 12, characters 15-52:
12 |        and B : sig type 'a t = <m: 'a array B.t> end
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: In the definition of B.t, type 'a array B.t should be 'a B.t
